--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <section id="aboutme">
                 <div class="content_wrapper">
                     <div class="img-wrapper">
-                        <img src="img/profile.JPG" alt="">
+                        <img src="img/profile.jpg" alt="">
                     </div>
                     <div class="aboutme-content">
                         <h1>Dongha Kim</h1>
