--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@
                         <img src="img/profile.jpg" alt="">
                     </div>
                     <div class="aboutme-content">
-                        <h1>Dongha Kim</h1>
+
                         <!-- type writing-->
+                        <span>안녕하세요. 저는</span>
+                        <div class="aboutme-typing">
+
+                        </div>
                     </div>
                 </div>
 
